# mpc_self_car_practice

./: .gitignore  CMakeLists.txt  README.md
examples/: cppad_example_1.cpp  cppad_ipopt_example_2.cpp
include/: mpc.h
scripts/: simulator_mpc.py
src/: main.cpp  mpc.cpp
webots_model/: README.md
